# hackduke-2026

./: index.html
email-search/: .env.example  .gitignore  Dockerfile  README.md  cli.py  docker-compose.yml  requirements.txt
email-search/app/: auth.py  config.py  email_parser.py  embeddings.py  gmail.py  inboxes.py  indexer.py  main.py  preprocessor.py  pyproject.toml  search.py  todo_cache.py  todos.py  vectordb.py
email-search/app/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  vite.config.ts
email-search/app/frontend/src/: App.tsx  api.ts  index.css
email-search/app/frontend/src/components/: Header.tsx  InboxDropdown.tsx  Landing.tsx  Results.tsx  SearchSection.tsx  TodoPage.tsx  TodoSidebar.tsx
email-search/app/static/: index.html
