[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.5.5",
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "google-api-python-client>=2.193.0",
    "google-auth-oauthlib>=1.3.0",
    "google-genai>=1.68.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "psycopg>=3.3.3",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.3.0",
]
